shift/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: open
spec:
  replicas: 4
  selector:
    matchLabels:
      app: open
  template:
    metadata:
      labels:
        app: open
    spec:
      containers:
        - name: open
          image: kirillvelichko/open:latest
          ports:
            - containerPort: 8080
              protocol: TCP
          livenessProbe:
            initialDelaySeconds: 60
            timeoutSeconds: 2
            httpGet:
              path: /actuator/health
              port: 8080
              scheme: HTTP
            readinessProbe:
              initialDelaySeconds: 30
              timeoutSeconds: 1
              tcpSocket:
                port: 8080
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
