shift/route.yml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: open-route
  annotations:
    haproxy.router.openshift.io/disable_cookies: 'true'
    haproxy.router.openshift.io/balance: roundrobin
spec:
  to:
    kind: Service
    name: open-service
